<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    <!--android:background="#ffdf6e35"-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:id="@+id/nombre"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/checkarritmia"
        android:layout_alignEnd="@+id/checkarritmia" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/edtnombre"
        android:layout_alignTop="@+id/nombre"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="37dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edad"
        android:id="@+id/textedad"
        android:textAppearance="?android:attr/textAppearanceLarge"

        android:layout_below="@+id/edtnombre"
        android:layout_alignLeft="@+id/textsexo"
        android:layout_alignStart="@+id/textsexo" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="3"
        android:id="@+id/edtedad"
        android:layout_alignTop="@+id/textedad"
        android:layout_alignStart="@+id/edtnombre" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/sex"
        android:id="@+id/textsexo"
        android:layout_below="@+id/edtedad"
        android:layout_alignLeft="@+id/nombre"
        android:layout_alignStart="@+id/nombre" />

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_toEndOf="@+id/textsexo"
        android:layout_alignTop="@+id/textsexo"
        android:layout_alignLeft="@+id/edtnombre"
        android:layout_alignStart="@+id/edtnombre"
        android:layout_alignBottom="@+id/textpeso"
        android:id="@+id/radioGroup">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/masc"
            android:id="@+id/rbmasc"
            android:layout_below="@+id/textView4"
            android:layout_alignTop="@+id/textView8"
            android:layout_alignStart="@+id/check4" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fem"
            android:id="@+id/rbfem"
            android:layout_alignTop="@+id/radioButton"
            android:layout_alignEnd="@+id/check4" />
        </RadioGroup>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/peso"
            android:id="@+id/textpeso"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_toStartOf="@+id/radioGroup"
            android:layout_marginTop="41dp"
            android:layout_below="@+id/textsexo"
            android:layout_alignLeft="@+id/textsexo"
            android:layout_alignStart="@+id/textsexo" />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:id="@+id/peso"
            android:ems="3"
            android:layout_alignStart="@id/edtnombre"
            android:layout_alignTop="@id/textpeso" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kg"
            android:id="@+id/textkg3"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_toEndOf="@+id/edtestatura"
            android:layout_alignBottom="@+id/peso"
            android:layout_alignRight="@+id/textcm"
            android:layout_alignEnd="@+id/textcm" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/est"
            android:id="@+id/textView6"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_toEndOf="@+id/textkg3"
            android:layout_below="@+id/peso"
            android:layout_alignRight="@+id/checkarritmia"
            android:layout_alignEnd="@+id/checkarritmia" />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edtestatura"
            android:inputType="text"
            android:ems="3"
            android:layout_alignTop="@id/textView6"
            android:layout_alignStart="@id/edtnombre"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cm"
            android:id="@+id/textcm"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_alignBottom="@+id/edtestatura"
            android:layout_toRightOf="@+id/edtestatura"
            android:layout_toEndOf="@+id/edtestatura" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enf"
            android:id="@+id/textenfermedades"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_below="@+id/edtestatura"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/asm"
            android:id="@+id/checkasma"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_toStartOf="@+id/edtestatura"
            android:layout_alignTop="@+id/checkhipertension"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arri"
            android:id="@+id/checkarritmia"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_below="@+id/checkasma"
            android:layout_alignParentStart="false"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hiper"
            android:id="@+id/checkhipertension"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_toEndOf="@+id/textenfermedades"
            android:layout_below="@+id/textenfermedades"
            android:layout_toRightOf="@+id/textenfermedades" />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card"
            android:id="@+id/checkcardio"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_alignTop="@+id/checkarritmia"
            android:layout_toEndOf="@+id/textenfermedades"
            android:layout_alignParentEnd="false"
            android:checked="false" />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diab"
            android:id="@+id/checkdiabetes"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_below="@+id/checkarritmia"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/act"
            android:id="@+id/infoButton"
            android:ems="10"
            android:layout_below="@+id/checkdiabetes"
            android:layout_marginTop="45dp"
            android:layout_alignRight="@+id/checkhipertension"
            android:layout_alignEnd="@+id/checkhipertension" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/est"
        android:id="@+id/textestatura"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_below="@+id/peso"
        android:layout_alignLeft="@+id/textpeso"
        android:layout_alignStart="@+id/textpeso" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Actualizado"
        android:id="@+id/updateNot"
        android:layout_below="@+id/infoButton"
        android:layout_alignLeft="@+id/infoButton"
        android:layout_alignStart="@+id/infoButton"
        android:visibility="invisible" />

</RelativeLayout>